<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">epubViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pick_epub">Pick Book</string>
    <string name="menu_chapters">Chapters</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="no_epub_found">No epub files Found</string>
    <string name="sd_card_not_mounted">SD card not mounted</string>
    <string name="epub_title">Title</string>
    <string name="no_book_selected">Have a error with this book</string>
    <string name="not_implemented">Not implemented</string>
    <string name="something_is_badly_broken">Something is badly broken</string>
    <string name="end_of_book">End of book</string>
    <string name="bookmark_dialog_title">Set/Restore Bookmark</string>
    <string name="bookmark_dialog_set_button">Set Bookmark</string>
    <string name="bookmark_dialog_goto_button">Goto Bookmark</string>
    <string name="bookmark_dialog_start_speech">Start Speech</string>
    <string name="bookmark_dialog_stop_speech">Stop Speech</string>
    <string name="options_menu_title">Options</string>
    <string name="text_to_speech_not_installed">Text To Speech not installed</string>
    <string name="table_of_contents_missing">Table of Contents not found</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Change leadership in developing countries</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <string name="change_leadership">Change leadership</string>
    <string name="in_developing_countries">In developing countries</string>
    <string name="another_book">Another book</string>
    <string name="rate_this_app_on_play_store">Rate this app on Play Store</string>
    <string name="like_this_app">Like this app? Your 5-star rating and Google +1 are appreciated</string>
    <string name="table_of_contents">Table of contents</string>
    <string name="no_bookmark">No bookmark</string>
    <string name="to_bookmark">To bookmark the page, click to bookmark icon</string>
    <string name="no_chapter">No chapter</string>
    <string name="has_not_chapter">This book has not chapter</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="enter_text_here">Enter text to search</string>
    <string name="search_text_must_least_3">Search text must be at least 3 characters.</string>
    <string name="have_error">Have a error with this book</string>
    <string name="loading_book">Loading book</string>
    <string name="searching">Searching...</string>
    <string name="no_results">No results have been found</string>
</resources>