<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dteviot.epubviewer.Activity.HomeActivity">

    <RelativeLayout
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_actionbar"
        android:background="@drawable/bg_title_home">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home"
            android:textSize="@dimen/title_home_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/book_in_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_title"
        android:layout_margin="10dp"
        android:background="@drawable/bg_selector_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/height_image_home"
            android:layout_height="@dimen/height_image_home"
            android:layout_marginRight="10dp"
            android:src="@drawable/logo_512" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_leadership"
                android:textSize="@dimen/name_book_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_developing_countries"
                android:textSize="@dimen/name_book_text_size" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/another_book_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_actionbar"
        android:layout_below="@+id/book_in_home"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_title_home">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/another_book"
            android:textSize="@dimen/title_home_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/another_book_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_another_book"
        android:layout_below="@+id/another_book_title">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/text_in_another_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="Network not available"
            android:textSize="@dimen/title_home_text_size"
            android:textStyle="italic" />

        <ProgressBar
            android:id="@+id/progress_in_another_book"
            style="@android:style/Widget.ProgressBar.Small.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/another_book_data"
        android:background="@drawable/bg_black_gradient" />

    <LinearLayout
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_selector_gray"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/another_book_data"
            android:background="@drawable/bg_black_gradient" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/rate_this_app_on_play_store"
            android:textSize="@dimen/title_home_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:text="@string/like_this_app"
            android:textSize="@dimen/title_home_text_size" />
    </LinearLayout>

</RelativeLayout>
