<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vinhblue.epub.Activity.SearchActivity">
    <RelativeLayout
        android:id="@+id/search_title_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_actionbar"
        android:background="@drawable/bg_title_reading">

        <TextView
            android:id="@+id/title_search_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/name_book_text_size" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        >
        <EditText
            android:id="@+id/search_edt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/height_image_button_small"
            android:background="@drawable/shape_rectangle_round_gray"
            android:gravity="center"
            android:hint="@string/enter_text_here"
            android:inputType="none"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/name_book_text_size" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            >
            <com.vinhblue.epub.Utils.SAutoBgImageButton
                android:id="@+id/search_btn"
                android:layout_width="@dimen/height_image_button_small"
                android:layout_height="@dimen/height_image_button_small"
                android:background="@drawable/searchx180"
                android:layout_gravity="center_vertical"
                />
            </LinearLayout>
        </LinearLayout>
    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/result_search_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:scrollbarThumbHorizontal="@drawable/shape_rectangle_round_gray"
            android:scrollbarThumbVertical="@drawable/shape_rectangle_round_gray"
            ></ListView>
        <LinearLayout
            android:id="@+id/no_data_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results"
                android:textSize="@dimen/name_book_text_size"
                />
            </LinearLayout>
    </RelativeLayout>
</LinearLayout>
